fix: image too wide

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,7 @@
 
   @include media-breakpoint-up(md) {
     width: $head-logo-width;
+    max-width: 25rem;
     height: $head-logo-height;
   }
 }
